test/fixtures/behaviors/common/error/badDefaultExport.behavior.ts

const someObject = {
  name: "weird"
}

export default someObject